--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.1",
     "pg": "^8.16.3",
+    "react-router-dom": "^5.3.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
